--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "autoprefixer": "^10.4.1",
+    "chai": "^4.3.4",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "ether": "^0.0.9",
+    "ethereum-waffle": "^3.4.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.11"
   }
