--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "ethers": "^5.5.3",
     "next": "12.0.7",
     "react": "17.0.2",
