--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@metamask/detect-provider": "^1.2.0",
     "@pdftron/webviewer": "^8.2.0",
     "ethers": "^5.5.3",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-tsparticles": "^1.39.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
