--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-tsparticles": "^1.39.0"
+    "react-tsparticles": "^1.39.0",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
