--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emailjs/browser": "^3.4.0",
     "@metamask/detect-provider": "^1.2.0",
     "@pdftron/webviewer": "^8.2.0",
+    "@truffle/contract": "^4.4.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
