--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "web3": "^1.6.1"
   },
   "devDependencies": {
+    "@truffle/hdwallet-provider": "^2.0.0",
     "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
