--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.11"
   }
 }
