--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ yarn-error.log*
 .vercel
 
 keys.json
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
