--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@emailjs/browser": "^3.4.0",
     "@metamask/detect-provider": "^1.2.0",
     "@pdftron/webviewer": "^8.2.0",
-    "ethers": "^5.5.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,8 +18,7 @@
     "react-toastify": "^8.1.0",
     "react-tsparticles": "^1.39.0",
     "swr": "^1.1.2",
-    "web3": "^1.6.1",
-    "web3modal": "^1.9.5"
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^2.0.0",
