--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@pdftron/webviewer": "^8.3.2",
     "next": "12.0.7",
+    "node": "^21.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
